--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-<h3>Home is where the heart is.</h3>
+<div class="jumbotron center-text">
+    <h1>Home is where Dev Match is.</h1>
+    <h3>A membership site where you can meet you dream developer</h3>
+</div>
