--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,7 +14,9 @@
  *= require_self
  */
 
+/* Added bootsrap dependencies */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+/* Added font-awesome dependencies */
 @import "font-awesome-sprockets";
 @import "font-awesome";
