reorganize css files

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,9 +14,5 @@
  *= require_self
  */
 
-/* Added bootsrap dependencies */
-@import "bootstrap-sprockets";
-@import "bootstrap";
-/* Added font-awesome dependencies */
-@import "font-awesome-sprockets";
-@import "font-awesome";
+
+// Moved code that was here to a new custom.css.scss file to clean things up.
