--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,18 @@
-<h3>So you want to know something about me? You're in luck!</h3>
+<h2>So you want to know something about me? You're in luck!</h2>
+
+<table class="table table-hover">
+    <tbody>
+        <tr>
+            <td>Where are we located?</td>
+            <td>Austin, TX</td>
+        </tr>
+        <tr>
+            <td>What is the pricing?</td>
+            <td>The first month is free, then $5 per month then forward</td>
+        </tr>
+        <tr>
+            <td>What is our favorite hockey team?</td>
+            <td><a href="http://redwings.nhl.com/"target='_blank'>Red Wings</a></td>
+        </tr>
+    </tbody>
+</table>
