updated alets in contact submission

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,1 @@
-<h3>So you want to know something about me? You're in luck!</h3>
+<h3>So you want to know something about Dev Match? You're in luck!</h3>
