--- a/app/views/contact_mailer/contact_email.html.erb
+++ b/app/views/contact_mailer/contact_email.html.erb
@@ -1,11 +1,9 @@
-<! DOCTYPE html>
+<!DOCTYPE html>
 <html>
-    <head>
-    </head>
-    
-    <body>
-    <p>You have recived a message from the site's contact from from <%= "#{ @name }, #{ @email }." %></p>
+  <head>
+  </head>
+  <body>
+    <p>You have received a message from the site's contact form, from <%= "#{ @name }, #{ @email }." %></p>
     <p><%= @body %></p>
-        
-    </body>
+  </body>
 </html>
