--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,16 @@
       <% end %>
     </div>
     <div class="collapse navbar-collapse" id="main-nav-collapse">
+      <div class="nav navbar-nav navbar-right">
+          <!-- if current_user is specific to the devise library. It checks to see if a user is logged in. The if statements is designed to toggle between which buttons render for the proper loggged in/loogged out context. --
+        <% if current_user %>
+          <%= button_to "Sign Out", destroy_user_session_path, class: 'btn btn-primary navbar-btn', method: :delete %>
+        <% else %>
+        
+          <%= link_to "Log In", new_user_session_path, class: 'btn btn-primary navbar-btn', method: :get %>
+          <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-success navbar-btn', mthod: :get %>
+        <% end %>
+      </div>
       <ul class="nav navbar-nav navbar-right">
                 <!-- Below are ruby links to the different pages in the views folder, but referencing routes. the new_contact is auto generated from resources :contacts -->
         <li><%= link_to 'About', about_path %></li>
