--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,3 +2,22 @@
     <h1>Home is where Dev Match is.</h1>
     <h3>A membership site where you can meet your dream developer</h3>
 </div>
+
+    <!-- The below links for signing up deem the previous sign up navbar button obsolete. That button in the application.html.erb file will be removed -->
+<div class="row">
+    <div class="col-md-6">
+        <div class="well">
+            <h2 class="text-center">Basic Membership</h2>
+            <h4>Sign up for a free account to gain access to the community.</h4>
+            <br/>
+            <%= link_to "Sign up with Free", new_user_registration_path, class: 'btn btn-primary btn-lg btn-block' %>
+        </div>
+    </div>
+     <div class="col-md-6">
+        <div class="well">
+            <h2 class="text-center">Pro Membership</h2>
+            <h4>Sign up for the pro account for $10/month and gain access to the community and contact information!</h4>
+            <%= link_to "Sign up with Pro", new_user_registration_path, class: 'btn btn-success btn-lg btn-block' %>
+        </div>
+    </div>
+</div>
