Modified signup form

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,7 +3,7 @@
     <h3>A membership site where you can meet your dream developer</h3>
 </div>
 
-    <!-- The below links for signing up deem the previous sign up navbar button obsolete. That button in the application.html.erb file will be removed -->
+    <!-- The below links for signing up deem the previous sign up navbar button obsolete. That button in the application.html.erb file has been removed -->
 <div class="row">
     <div class="col-md-6">
         <div class="well">
