--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,33 +1,25 @@
   <!-- This is a bootstrap class specifically for tables. We can use this here because all of the body is already wrapped in the bootstrap container class in the application.html.erb file.
     This "form-group" and "form-input" classes are special to bootstrap as well-->
 <div class="row">
-  <div class="col-md-4 col-md-offset-4"> <!-- Bootstrap class to center form (4 columns wide, offset 4 columns to center -->
+    <!-- This is logic to toggle sign up from Pro/Basic account -->
+  <div class="col-md-6 col-md-offset-3 text-center">
+    <% if params[:plan] == '2' %>
+      <h1>Pro Account</h1>
+      <p>Sign up for the pro account for $10/month and gain access to the community and contact information!</p>
+    <% else %>
+      <h1>Basic Account</h1>
+      <p>Sign up for a free account to gain access to the community.</p>
+    <% end %>
+  </div>
+  
+  <div class="col-md-6 col-md-offset-3"> <!-- Bootstrap class to center form (4 columns wide, offset 4 columns to center -->
     <div class="well">     <!-- Boostrap class to add brey background to form -->
         <h2>Sign up</h2>
-          <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-            <%= devise_error_messages! %>
-          
-            <div class="field form-group">
-              <%= f.label :email %><br />
-              <%= f.email_field :email, autofocus: true, class: 'form-control' %>
-            </div>
-          
-            <div class="field form-group">
-              <%= f.label :password %>
-              <% if @validatable %>
-              <em>(<%= @minimum_password_length %> characters minimum)</em>
-              <% end %><br />
-              <%= f.password_field :password, autocomplete: "off", class: 'form-control' %>
-            </div>
-          
-            <div class="field form-group">
-              <%= f.label :password_confirmation %><br />
-              <%= f.password_field :password_confirmation, autocomplete: "off", class: 'form-control'  %>
-            </div>
-          
-            <div class="actions form-group">
-              <%= f.submit "Sign up", class: 'btn btn-success' %>
-            </div>
+            <!-- If statement to determine which partial form to render (_basic_form.html.erb or _pro_form.html.erb) -->
+          <% if params[:plan] == '2' %>
+            <%= render "pro_form" %>
+          <% else %>
+            <%= render "basic_form" %>
           <% end %>
           
           <%= render "devise/shared/links" %>
