--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <!-- added environment variable meta tage to provide stripe authentication to be used in javascript to initiate stripe integration during registration. the variable is stores in the stripe.rb initiatlizer file, which references the value in the application.yml config file (hidden -->
   <%= tag :meta, :name => "stripe_key", :content => STRIPE_PUBLIC_KEY %>
   <%= csrf_meta_tags %>
-</head>d
+</head>
 <body>
 
 <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
