--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,9 @@
-<%= @user %>
+    <!-- one the @user variable is created in the profile_controllers file, and we have a relationship between a user and their profile, we can use dot chaining to hammer down to a specific user's attribute -->
+<%= @user.profile.first_name %> <%= @user.profile.last_name %>
+<%= @user.profile.job_title %><br/>
+    <!-- only display phone_number and contact_email if the user is a pro user (plan_id == 2) -->
+<% if current_user.plan_id == 2 %>
+    <%= @user.profile.phone_number %><br/>
+    <%= @user.profile.contact_email %><br/>
+<% end %>
+<%= @user.profile.description %><br/>
