--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,11 +1,3 @@
-    <!-- current_user is a devise helper filter -- https://github.com/plataformatec/devise#controller-filters-and-helpers
-    
-        the current_user is just an example of query string parameter technique to pass a value in the link url
-        
-        if current_user checks to see is someone is logged in.
-    -->
-<%= link_to "Create your profile!", new_user_profile_path(current_user) if current_user %>
-
 <div class="jumbotron text-center">
     <h1>Home is where Dev Match is.</h1>
     <h3>A membership site where you can meet your dream developer</h3>
@@ -13,25 +5,55 @@
 
     <!-- The below links for signing up deem the previous sign up navbar button obsolete. That button in the application.html.erb file has been removed -->
 <div class="row">
-    <div class="col-md-6">
-        <div class="well">
-            <h2 class="text-center">Basic Membership</h2>
-            <h4>Sign up for a free account to gain access to the community.</h4>
-            <br/>
-                <!-- 
-                    (plan: @pro_plan.id)
-                is calling the variable that is defined in the pages_controller, which is equal to the id of the plan in the Plan class (either 1 for basic or 2 for pro) 
-                This is call query string parameters
-                -->
-            <%= link_to "Sign up with Free", new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
+
+        <!-- only display registration links if user is not logged in.
+            user_signed_in? is a spcial boolean rooted in devise -->
+    <% if user_signed_in? %>
+    
+            <!-- PROFILE SECTION -->
+        <div class="col-md-4">
+            <div class="well">
+                <h2 class="text-center">Your Profile</h2>
+                    <!-- If user has profile -->
+                <% if current_user.profile %>
+                    <%= link_to "Edit your profile", "#", class: 'btn btn-default btn-lg btn-block'   %>
+                    <%= link_to "View your profile", user_path(current_user), class: 'btn btn-default btn-lg btn-block'   %>
+                <% else %>
+                        <!-- the current_user is just an example of query string parameter technique to pass a value in the link url. -->
+                    <%= link_to "Create your profile!", new_user_profile_path(current_user), class: 'btn btn-default btn-lg btn-block' %>
+                <% end %>
+            </div>
         </div>
-    </div>
-     <div class="col-md-6">
-        <div class="well">
-            <h2 class="text-center">Pro Membership</h2>
-            <h4>Sign up for the pro account for $10/month and gain access to the community and contact information!</h4>
-                
-            <%= link_to "Sign up with Pro", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block' %>
+        
+            <!-- COMMUNITY SECTION -->
+        <div class="col-md-8">
+            <div class="well">
+                <h2 class="text-center">The Community</h2>
+                <p>Visit the community to meet other developers, entrepreneurs, and investors!</p>
+                <%= link_to "Visit the Community!", "#", class: 'btn btn-default btn-lg btn-block'  %>
+            </div>
         </div>
-    </div>
+    <% else %>
+        <div class="col-md-6">
+            <div class="well">
+                <h2 class="text-center">Basic Membership</h2>
+                <h4>Sign up for a free account to gain access to the community.</h4>
+                <br/>
+                    <!-- 
+                        (plan: @pro_plan.id)
+                    is calling the variable that is defined in the pages_controller, which is equal to the id of the plan in the Plan class (either 1 for basic or 2 for pro) 
+                    This is call query string parameters
+                    -->
+                <%= link_to "Sign up with Free", new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
+            </div>
+        </div>
+         <div class="col-md-6">
+            <div class="well">
+                <h2 class="text-center">Pro Membership</h2>
+                <h4>Sign up for the pro account for $10/month and gain access to the community and contact information!</h4>
+                    
+                <%= link_to "Sign up with Pro", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block' %>
+            </div>
+        </div>
+    <% end %>
 </div>
