--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -19,8 +19,9 @@
                     <%= link_to "Edit your profile", "#", class: 'btn btn-default btn-lg btn-block'   %>
                     <%= link_to "View your profile", user_path(current_user), class: 'btn btn-default btn-lg btn-block'   %>
                 <% else %>
+                    <p>Create your profile so you can share your information with the Community!</p>
                         <!-- the current_user is just an example of query string parameter technique to pass a value in the link url. -->
-                    <%= link_to "Create your profile!", new_user_profile_path(current_user), class: 'btn btn-default btn-lg btn-block' %>
+                    <%= link_to "Create your profile", new_user_profile_path(current_user), class: 'btn btn-default btn-lg btn-block' %>
                 <% end %>
             </div>
         </div>
