--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,8 +16,9 @@
                 <h2 class="text-center">Your Profile</h2>
                     <!-- If user has profile -->
                 <% if current_user.profile %>
-                    <%= link_to "Edit your profile", "#", class: 'btn btn-default btn-lg btn-block'   %>
-                    <%= link_to "View your profile", user_path(current_user), class: 'btn btn-default btn-lg btn-block'   %>
+                        <!-- (user_id: current_user.id) == (current_user) -->
+                    <%= link_to "Edit your profile", edit_user_profile_path(user_id: current_user.id), class: 'btn btn-default btn-lg btn-block' %>
+                    <%= link_to "View your profile", user_path(current_user), class: 'btn btn-default btn-lg btn-block' %>
                 <% else %>
                     <p>Create your profile so you can share your information with the Community!</p>
                         <!-- the current_user is just an example of query string parameter technique to pass a value in the link url. -->
