--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
     <div class="col-md-6 col-md-offset-3">
-    <h1 class="text-center">Create Your Profile</h1>
+    <h1 class="text-center">Edit Your Profile</h1>
     <p class="text-center">Be a part of the Dev Match community by creating your profile.</p>
         <div class="well">
             <!-- partial: _form.html.erb -->
@@ -8,4 +8,3 @@
         </div>
     </div>
 </div>
-    
