added helper comments

--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -3,7 +3,7 @@
     <h1 class="text-center">Edit Your Profile</h1>
     <p class="text-center">Be a part of the Dev Match community by creating your profile.</p>
         <div class="well">
-            <!-- partial: _form.html.erb -->
+            <!-- partial: _form.html.erb. note that it's 'form'. not '_form' -->
           <%= render 'form' %>        
         </div>
     </div>
