added more comments

--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,3 +1,5 @@
+<!-- Keep rails DRY. Don't Repeate Yourself -->
+    
     <!-- need to have url: root when singular (@profile)
         Copied the form fields from project. These are repetitive -->
 <%= form_for @profile, url: user_profile_path do |f| %>
