--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,21 @@
-    <!-- one the @user variable is created in the profile_controllers file, and we have a relationship between a user and their profile, we can use dot chaining to hammer down to a specific user's attribute -->
-    <!-- from paperclip documentation: https://github.com/thoughtbot/paperclip -->
-<%= image_tag @user.profile.avatar.url %><br>
-
-<%= @user.profile.first_name %> <%= @user.profile.last_name %><br>
-<%= @user.profile.job_title %><br/>
-    <!-- only display phone_number and contact_email if the user is a pro user (plan_id == 2) -->
-<% if current_user.plan_id == 2 %>
-    <%= @user.profile.phone_number %><br/>
-    <%= @user.profile.contact_email %><br/>
-<% end %>
-<%= @user.profile.description %><br/>
+<div class="row"> 
+    <div class="col-md-3 text-center">
+            <!-- one the @user variable is created in the profile_controllers file, and we have a relationship between a user and their profile, we can use dot chaining to hammer down to a specific user's attribute -->
+            <!-- from paperclip documentation: https://github.com/thoughtbot/paperclip -->
+        <%= image_tag @user.profile.avatar.url %>
+    </div>
+    
+    <div class="col-md-9">
+        <h1><%= @user.profile.first_name %> <%= @user.profile.last_name %></h1>
+            <!-- icon fueled fron user_helper.rb file and style from user.css.scss -->
+        <h3><span class="job-title-icon"><%= job_title_icon %></span> <%= @user.profile.job_title %></h3>
+         <div class="well">
+             <%= @user.profile.description %>
+         </div>
+            <!-- only display phone_number and contact_email if the user is a pro user (plan_id == 2) -->
+        <% if current_user.plan_id == 2 %>
+            <%= @user.profile.phone_number %><br/>
+            <%= @user.profile.contact_email %><br/>
+        <% end %>
+    </div>
+</div>
