--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,17 +5,21 @@
         <%= image_tag @user.profile.avatar.url %>
     </div>
     
-    <div class="col-md-9">
+    <div class="col-md-6">
         <h1><%= @user.profile.first_name %> <%= @user.profile.last_name %></h1>
             <!-- icon fueled fron user_helper.rb file and style from user.css.scss -->
         <h3><span class="job-title-icon"><%= job_title_icon %></span> <%= @user.profile.job_title %></h3>
-         <div class="well">
+         <div class="well profile-block profile-description">
+         <h3>Description</h3>
              <%= @user.profile.description %>
          </div>
             <!-- only display phone_number and contact_email if the user is a pro user (plan_id == 2) -->
-        <% if current_user.plan_id == 2 %>
-            <%= @user.profile.phone_number %><br/>
-            <%= @user.profile.contact_email %><br/>
+        <% if true#current_user.plan_id == 2 %>
+            <div class="well profile-block contact-info">
+            <h3>Contact Info</h3>
+                <%= @user.profile.phone_number %><br/>
+                <%= @user.profile.contact_email %><br/>
+            </div>
         <% end %>
     </div>
 </div>
