Improved Community profile page

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,3 +1,5 @@
+/* NOTE to consider the autoprefixer gem - https://github.com/ai/autoprefixer-rails */
+
 /*
  * This is a manifest file that'll be compiled into application.css, which will include all the files
  * listed below.
