--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -1,29 +1,41 @@
+/* Users Show Page Styles */
+.user-show-avatar {
+  height: 128px;
+  width: 128px;
+}
+
 .job-title-icon {
-    display: inline-block;
-    width: 30px;
-    height: 30px;
-    border: 2px solid #2e6da4;
-    border-radius: 4px;
-    background-color: #337ab7;
-    color: white;
-    text-align: center;
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  border: 2px solid #2e6da4;
+  border-radius: 4px;
+  background-color: #337ab7;
+  color: white;
+  text-align: center;
 }
 
-    /* inspected element of green button - http://getbootstrap.com/css/#buttons */
 .well.profile-block {
-    color: #fff;
-         /* nested css is a sass thing - http://sass-lang.com/guide*/
-    h3 {
-        margin-top: 0;
-    }
+  color: #fff;
+  h3 {
+    margin-top: 0;
+  }
 }
-
 .well.profile-description {
-    background-color: #5cb85c;
-    border-color: #4cae4c;
+  background-color: #5cb85c;
+  border-color: #4cae4c;
 }
 
 .well.contact-info {
-    background-color: #5bc0de;
-    border-color: #46b8da;
+  background-color: #5bc0de;
+  border-color: #46b8da;
+}
+
+/* Users Index Page Styles */
+.user-index-avatar {
+  border-radius: 50%;
+}
+
+.well.white-bg {
+  background-color: white;
 }
