--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
     <div class="collapse navbar-collapse" id="main-nav-collapse">
       <div class="nav navbar-nav navbar-right">
           <!-- if current_user is specific to the devise library. It checks to see if a user is logged in. The if statements is designed to toggle between which buttons render for the proper loggged in/loogged out context. -->
-        <% if current_user %>
+        <% if user_signed_in? %>
           <%= button_to "Sign Out", destroy_user_session_path, class: 'btn btn-primary navbar-btn', method: :delete %>
         <% else %>
         
@@ -50,6 +50,10 @@
       </div>
       <ul class="nav navbar-nav navbar-right">
                 <!-- Below are ruby links to the different pages in the views folder, but referencing routes. the new_contact is auto generated from resources :contacts -->
+        <% if user_signed_in? %>
+          <li><%= link_to 'Community', users_path %></li>
+          <li><%= link_to 'My Account', edit_user_registration_path %></li>
+        <% end %>
         <li><%= link_to 'About', about_path %></li>
         <li><%= link_to 'Contact Us', new_contact_path %></li>
       </ul>
