--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -3,6 +3,8 @@
             Ths "form-group" and "form-input" classes are special to bootstrap as well-->
 <div class="row">
          <div class="col-md-4 col-md-offset-4"> <!-- Bootstrap class to center form (4 columns wide, offset 4 columns to center -->
+         <h1 class="text-center">Contact Us</h1>
+            <p class="text-center">Reach out if you have any questions or comments.</p>
              <div class="well">     <!-- Boostrap class to add brey background to form -->
                  <%= form_for @contact do |f| %>
                     <div class="form-group">  
