--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,2 @@
-<h3>So you want to know something about Dev Match? You're in luck!</h3>
+<h2>About Us</h2>
+<p>Welcome to Dev Match. We are a community of developers, entrepreneurs, and investors who are interested in meeting one another and sharing ideas.</p>
